# CC_Generator

./: .gitignore  LICENSE  Makefile  README.md  main.c
src/: Makefile  generatefuncs.c  generatefuncs.h  graphics.c  graphics.h  main.c  sighandler.c  sighandler.h  userfuncs.c  userfuncs.h
src/CC_Generator/: CC_Generator.sln  CMakeLists.txt  Makefile
src/CC_Generator/API/: API.APS  API.cpp  API.h  API.rc  API.vcxproj  API.vcxproj.filters  CMakeLists.txt  Card.cpp  Card.h  DB_API.cpp  DB_API.h  File.h  resource.h  resource1.h
src/CC_Generator/API/Dependencies/sqlite-dll-win32-x86-3430100/: sqlite3.def
src/CC_Generator/API/Dependencies/sqlite-dll-win64-x64-3430100/: sqlite3.def
src/CC_Generator/API/Dependencies/sqlite-tools-linux-x86-3430100/sqlite-tools-linux-x86-3430100/: sqldiff  sqlite3  sqlite3_analyzer
src/CC_Generator/CC_Generator/: CC_Generator.vcxproj  console_main.cpp  gui_main.cpp  main.cpp
src/CC_Generator/Console/: CMakeLists.txt  Console.cpp  Console.h  Console.vcxproj  Console.vcxproj.filters
src/CC_Generator/Console/Dependencies/PDCurses-3.9/wincon/: pdcscrn.c
src/CC_Generator/GUI/: CMakeLists.txt  FileDialog.h  GUI.cpp  GUI.h  GUI.vcxproj  GUI.vcxproj.filters  LinuxFileDialog.cpp  WindowsFileDialog.cpp
